# Man

./: .gitignore  CMakeLists.txt  README.md
CMake/: SetupCUDA.cmake
Man/: CMakeLists.txt  Man.hpp
Man/Core/: Concepts.hpp  Constants.hpp  Defines.hpp  Forward.hpp  Man.cpp  Matrix.hpp  Quaternion.hpp  Transform.hpp  Vector.hpp
Man/Detail/: Platform.hpp
Man/Detail/CUDA/: CUDA.hpp
Man/Detail/Common/: ScalarMath.hpp
Man/Detail/SIMD/: SIMD.hpp
Tests/: CMakeLists.txt
